--- a/app.html
+++ b/app.html
@@ -1,3 +1,4 @@
+<!-- app.html -->
 <div class="slds-p-top_large">
-    <c-hello-world class="slds-text-heading_medium"></c-hello-world>
-</div>
+  <c-hello-world first-name="Lightning"></c-hello-world>
+</div
